--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -28,12 +28,12 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 // Dialog
 //
 
-HWINFO DIALOG DISCARDABLE  22, 17, 201, 175
+HWINFO DIALOG DISCARDABLE  22, 17, 201, 206
 STYLE DS_MODALFRAME | WS_CAPTION | WS_SYSMENU
 CAPTION "dTV Hardware Information"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,68,156,65,14,WS_GROUP
+    DEFPUSHBUTTON   "OK",IDOK,68,187,65,14,WS_GROUP
     LTEXT           "",IDC_TEXT1,66,15,125,10
     LTEXT           "BT-Typ",IDC_STATIC,5,15,40,10
     LTEXT           "",IDC_TEXT6,66,25,125,10
@@ -48,14 +48,17 @@ BEGIN
     LTEXT           "Videotext",IDC_STATIC,5,80,40,10
     LTEXT           "",IDC_TEXT16,66,70,125,10
     LTEXT           "MSP-Version",IDC_STATIC,5,70,43,10
-    LTEXT           "",IDC_TEXT17,61,110,125,10
+    LTEXT           "",IDC_TEXT17,66,109,125,10
     LTEXT           "Surface",IDC_STATIC,5,110,45,10
-    LTEXT           "",IDC_TEXT18,61,120,125,10
+    LTEXT           "",IDC_TEXT18,66,120,125,10
     LTEXT           "Overlay",IDC_STATIC,5,120,45,10
-    LTEXT           "",IDC_TEXT19,61,131,125,10
+    LTEXT           "",IDC_TEXT19,66,129,125,10
     LTEXT           "Overlay-Strech",IDC_STATIC,5,131,50,10
     GROUPBOX        "BT-Hardware",IDC_STATIC,3,2,195,95
-    GROUPBOX        "Video-Subsystem",IDC_STATIC,3,102,195,50
+    GROUPBOX        "Video-Subsystem",IDC_STATIC,3,100,195,50
+    GROUPBOX        "Processor",IDC_STATIC,3,152,195,33
+    LTEXT           "CPU Type",IDC_STATIC,5,166,45,10
+    LTEXT           "",IDC_CPU_TYPE,66,166,125,10
 END
 
 CHANNELLIST DIALOG DISCARDABLE  22, 17, 75, 156
@@ -1023,7 +1026,7 @@ BEGIN
     "HWINFO", DIALOG
     BEGIN
         RIGHTMARGIN, 198
-        BOTTOMMARGIN, 170
+        BOTTOMMARGIN, 201
     END
 
     "CHANNELLIST", DIALOG
