--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -58,7 +58,7 @@ BEGIN
     GROUPBOX        "Video-Subsystem",IDC_STATIC,3,100,195,50
     GROUPBOX        "Processor",IDC_STATIC,3,152,195,33
     LTEXT           "CPU Type",IDC_STATIC,5,166,45,10
-//    LTEXT           "",IDC_CPU_TYPE,66,166,125,10
+    LTEXT           "",IDC_CPU_TYPE,66,166,125,10
 END
 
 CHANNELLIST DIALOG DISCARDABLE  22, 17, 75, 156
@@ -471,7 +471,7 @@ END
 ABOUT DIALOGEX 22, 17, 374, 274
 STYLE DS_MODALFRAME | WS_CAPTION | WS_SYSMENU
 CAPTION "About dTV"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,305,9,58,19,WS_GROUP,WS_EX_CLIENTEDGE
     CTEXT           "dTV Version 2.x",IDC_VERSION,0,3,293,9
