--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -93,14 +93,11 @@ SPLASHBOX DIALOGEX 0, 0, 145, 192
 STYLE DS_SYSMODAL | DS_NOIDLEMSG | DS_SETFOREGROUND | DS_3DLOOK | DS_CENTER | 
     WS_POPUP | WS_VISIBLE | WS_BORDER
 EXSTYLE WS_EX_NOPARENTNOTIFY
-FONT 8, "System", 0, 0, 0x1
+FONT 8, "System"
 BEGIN
     CONTROL         "STARTUP",IDC_STATIC,"Static",SS_BITMAP,0,0,11,11
-    CTEXT           "",IDC_TEXT1,40,144,60,8
-    CTEXT           "",IDC_TEXT2,40,152,60,8
-    CTEXT           "",IDC_TEXT3,40,160,60,8
-    CTEXT           "",IDC_TEXT4,40,168,60,8
-    CTEXT           "",IDC_TEXT5,40,176,60,8
+    LISTBOX         IDC_LIST1,38,140,66,47,NOT LBS_NOTIFY | 
+                    LBS_NOINTEGRALHEIGHT | NOT WS_BORDER | WS_TABSTOP
 END
 
 VIDEOTEXTSMALL DIALOG DISCARDABLE  22, 17, 277, 236
@@ -132,47 +129,47 @@ BEGIN
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDFRAME,6,5,45,150
     DEFPUSHBUTTON   "OK",IDOK,305,161,45,15
     PUSHBUTTON      "Default",IDDEFAULT,154,161,45,15
-    CONTROL         "SLIDER",IDC_STATIC,"Static",SS_BITMAP,19,41,15,13
-    PUSHBUTTON      "",IDC_S1,18,50,15,10,WS_DISABLED
     EDITTEXT        IDC_D1,10,25,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED
     CTEXT           "Contrast",IDC_STATIC,60,9,33,10
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDFRAME,55,5,45,150
-    CONTROL         "SLIDER",IDC_STATIC,"Static",SS_BITMAP,70,41,15,13
-    PUSHBUTTON      "",IDC_S2,70,50,15,10,WS_DISABLED
     EDITTEXT        IDC_D2,60,25,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED
     CTEXT           "Hue",IDC_STATIC,110,9,33,10
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDFRAME,105,5,45,150
-    CONTROL         "SLIDER",IDC_STATIC,"Static",SS_BITMAP,120,41,15,13
-    PUSHBUTTON      "",IDC_S3,120,50,15,10,WS_DISABLED
     EDITTEXT        IDC_D3,110,25,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED
     CTEXT           "Color",IDC_STATIC,160,9,33,10
     PUSHBUTTON      "Cancel",IDCANCEL,6,161,45,15
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDFRAME,155,5,45,150
-    CONTROL         "SLIDER",IDC_STATIC,"Static",SS_BITMAP,170,41,15,13
-    PUSHBUTTON      "",IDC_S4,170,50,15,10,WS_DISABLED
     CTEXT           "Color U",IDC_STATIC,210,9,33,10
     EDITTEXT        IDC_D4,160,25,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDFRAME,205,5,45,150
-    CONTROL         "SLIDER",IDC_STATIC,"Static",SS_BITMAP,220,41,15,13
-    PUSHBUTTON      "",IDC_S5,220,50,15,10,WS_DISABLED
     EDITTEXT        IDC_D5,210,25,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED
     CTEXT           "Color V",IDC_STATIC,260,9,33,10
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDFRAME,255,5,45,150
-    CONTROL         "SLIDER",IDC_STATIC,"Static",SS_BITMAP,270,41,15,13
-    PUSHBUTTON      "",IDC_S6,270,50,15,10,WS_DISABLED
     EDITTEXT        IDC_D6,260,25,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED
     CTEXT           "Overscan",IDC_STATIC,311,9,33,10
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDFRAME,305,5,45,150
-    CONTROL         "SLIDER",IDC_STATIC,"Static",SS_BITMAP,319,42,15,13
-    PUSHBUTTON      "",IDC_S7,319,50,15,10,WS_DISABLED
     EDITTEXT        IDC_D7,309,26,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED
+    CONTROL         "Slider1",IDC_SLIDER1,"msctls_trackbar32",TBS_VERT | 
+                    TBS_TOP | WS_TABSTOP,16,41,23,109
+    CONTROL         "Slider1",IDC_SLIDER2,"msctls_trackbar32",TBS_VERT | 
+                    TBS_TOP | WS_TABSTOP,66,40,23,109
+    CONTROL         "Slider1",IDC_SLIDER3,"msctls_trackbar32",TBS_VERT | 
+                    TBS_TOP | WS_TABSTOP,116,41,23,109
+    CONTROL         "Slider1",IDC_SLIDER4,"msctls_trackbar32",TBS_VERT | 
+                    TBS_TOP | WS_TABSTOP,166,41,23,109
+    CONTROL         "Slider1",IDC_SLIDER5,"msctls_trackbar32",TBS_VERT | 
+                    TBS_TOP | WS_TABSTOP,216,41,23,109
+    CONTROL         "Slider1",IDC_SLIDER6,"msctls_trackbar32",TBS_VERT | 
+                    TBS_TOP | WS_TABSTOP,266,41,23,109
+    CONTROL         "Slider1",IDC_SLIDER7,"msctls_trackbar32",TBS_VERT | 
+                    TBS_TOP | WS_TABSTOP,315,41,23,109
 END
 
 AUDIOEINSTELLUNGEN DIALOG DISCARDABLE  0, 0, 257, 236
