--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -654,69 +654,22 @@ BEGIN
                     WS_TABSTOP,129,163,38,40
 END
 
-UI_SUB_MENU DIALOG DISCARDABLE  0, 0, 376, 223
+UI_SUB_MENU DIALOG DISCARDABLE  0, 0, 375, 193
 STYLE DS_MODALFRAME | DS_3DLOOK | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Dialog"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,7,202,32,14
-    PUSHBUTTON      "Cancel",IDCANCEL,47,202,32,14
-    CONTROL         "Slider1",IDC_SLIDER1,"msctls_trackbar32",TBS_TOP | 
-                    TBS_TOOLTIPS | WS_TABSTOP,200,20,170,18
-    CONTROL         "Slider2",IDC_SLIDER2,"msctls_trackbar32",TBS_TOP | 
-                    TBS_TOOLTIPS | WS_TABSTOP,200,40,170,18
-    CONTROL         "Slider3",IDC_SLIDER3,"msctls_trackbar32",TBS_TOP | 
-                    TBS_TOOLTIPS | WS_TABSTOP,200,60,170,18
-    CONTROL         "Slider4",IDC_SLIDER4,"msctls_trackbar32",TBS_TOP | 
-                    TBS_TOOLTIPS | WS_TABSTOP,200,80,170,18
-    CONTROL         "Slider5",IDC_SLIDER5,"msctls_trackbar32",TBS_TOP | 
-                    TBS_TOOLTIPS | WS_TABSTOP,200,100,170,18
-    CONTROL         "Slider6",IDC_SLIDER6,"msctls_trackbar32",TBS_TOP | 
-                    TBS_TOOLTIPS | WS_TABSTOP,200,120,170,18
-    CONTROL         "Slider7",IDC_SLIDER7,"msctls_trackbar32",TBS_TOP | 
-                    TBS_TOOLTIPS | WS_TABSTOP,200,140,170,18
-    CONTROL         "Slider8",IDC_SLIDER8,"msctls_trackbar32",TBS_TOP | 
-                    TBS_TOOLTIPS | WS_TABSTOP,200,160,170,18
-    LTEXT           "Static1",IDC_STATIC1,10,20,186,10
-    LTEXT           "Static2",IDC_STATIC2,10,40,186,10
-    LTEXT           "Static3",IDC_STATIC3,10,60,186,10
-    LTEXT           "Static4",IDC_STATIC4,10,80,186,10
-    LTEXT           "Static5",IDC_STATIC5,10,100,186,10
-    LTEXT           "Static6",IDC_STATIC6,10,120,186,10
-    LTEXT           "Static7",IDC_STATIC7,10,140,186,10
-    LTEXT           "Static8",IDC_STATIC8,10,160,186,10
-    CONTROL         "",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,200,
-                    20,166,17
-    CONTROL         "",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,200,
-                    40,166,17
-    CONTROL         "",IDC_CHECK3,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,200,
-                    60,166,17
-    CONTROL         "",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,200,
-                    80,166,17
-    CONTROL         "",IDC_CHECK5,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,200,
-                    100,166,17
-    CONTROL         "",IDC_CHECK6,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,200,
-                    120,166,17
-    CONTROL         "",IDC_CHECK7,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,200,
-                    140,166,17
-    CONTROL         "",IDC_CHECK8,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,200,
-                    160,166,17
-    COMBOBOX        IDC_COMBO1,200,20,167,17,CBS_DROPDOWN | CBS_SORT | 
-                    WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO2,200,40,167,17,CBS_DROPDOWN | CBS_SORT | 
-                    WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO3,200,60,167,17,CBS_DROPDOWN | CBS_SORT | 
-                    WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO4,200,80,167,17,CBS_DROPDOWN | CBS_SORT | 
-                    WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO5,200,100,166,17,CBS_DROPDOWN | CBS_SORT | 
-                    WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO6,200,120,113,17,CBS_DROPDOWN | CBS_SORT | 
-                    WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO7,200,140,167,17,CBS_DROPDOWN | CBS_SORT | 
-                    WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO8,200,160,167,17,CBS_DROPDOWN | CBS_SORT | 
-                    WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Static1",IDC_STATIC1,10,13,108,10
+    LTEXT           "Static2",IDC_STATIC2,10,33,108,10
+    LTEXT           "Static3",IDC_STATIC3,10,53,108,10
+    LTEXT           "Static4",IDC_STATIC4,10,73,108,10
+    LTEXT           "Static5",IDC_STATIC5,10,93,108,10
+    LTEXT           "Static6",IDC_STATIC6,10,113,108,10
+    LTEXT           "Static7",IDC_STATIC7,10,133,108,10
+    LTEXT           "Static8",IDC_STATIC8,10,153,108,10
+    DEFPUSHBUTTON   "OK",IDOK,7,172,43,14
+    PUSHBUTTON      "Cancel",IDCANCEL,58,172,43,14
+    PUSHBUTTON      "&Defaults",IDDEFAULTS,107,172,43,14
 END
 
 
@@ -1154,9 +1107,9 @@ BEGIN
     "UI_SUB_MENU", DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 369
+        RIGHTMARGIN, 368
         TOPMARGIN, 7
-        BOTTOMMARGIN, 216
+        BOTTOMMARGIN, 186
     END
 END
 #endif    // APSTUDIO_INVOKED
