--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -847,7 +847,7 @@ BEGIN
             MENUITEM "PAL-&M\tShift+Alt+F4",        IDM_TYPEFORMAT_3
             MENUITEM "PA&L-N\tShift+Alt+F5",        IDM_TYPEFORMAT_4
             MENUITEM "NTSC Japan   \tShift+Alt+F6", IDM_TYPEFORMAT_5
-            MENUITEM "PAL60   \tShift+Alt+F6",      IDM_TYPEFORMAT_6
+            MENUITEM "PAL60   \tShift+Alt+F7",      IDM_TYPEFORMAT_6
         END
         POPUP "Pixel &Width"
         BEGIN
@@ -1233,6 +1233,7 @@ BEGIN
                                                     NOINVERT
     VK_F6,          IDM_TYPEFORMAT_5,       VIRTKEY, SHIFT, ALT, NOINVERT
     VK_F7,          IDM_SOURCE_CCIR656,     VIRTKEY, CONTROL, ALT, NOINVERT
+    VK_F7,          IDM_TYPEFORMAT_6,       VIRTKEY, SHIFT, ALT, NOINVERT
     VK_HOME,        IDM_CHANNEL_LIST,       VIRTKEY, NOINVERT
     VK_LEFT,        IDM_VT_PAGE_MINUS,      VIRTKEY, NOINVERT
     VK_NEXT,        IDM_CHANNELMINUS,       VIRTKEY, NOINVERT
