1) Made bounce timer configurable from INI and made default 1 second
2) Added experemental defered setOverlay option (off by default).  Will set the overlay between drawing the black and purple bars.  Requires a wait for the VBI however...

--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -802,6 +802,8 @@ BEGIN
         END
         MENUITEM "Bounce Window Position (Experimental)\tCtrl+B", 
                                                 IDM_WINPOS_BOUNCE
+        MENUITEM "Defer Setting Overlay (Experimental)", 
+                                                IDM_ASPECT_DEFER_OVERLAY
     END
     POPUP "&Settings"
     BEGIN
